2004-11-11  Chris Dunlap  <cdunlap@llnl.gov>

	* configure.ac: Tweaked inet_ntop replacement test for Solaris.

	* src/libmissing/inet_ntop.h: Added sys/socket.h include for socklen_t.

	* src/libmissing/inet_ntop.h: Changed #ifndef x to #if !x.
	* src/libmissing/strlcat.h, src/libmissing/strlcpy.h:
	  Changed #if #else x to #if !x.

	* src/libmunge/auth_send.c, src/libmunge/msg_client.c,
	  src/munged/munged.c: Replaced strlcat/strlcpy includes w/ missing.h.

	* configure.ac:
	  Replaced inet_ntoa() with gethostbyname() in X_AC_CHECK_COND_LIB.

	* configure.ac, src/libmissing/inet_ntop.c, src/libmissing/inet_ntop.h,
	  src/libmissing/missing.h, src/munge/unmunge.c, src/munged/conf.c:
	  Added support for platforms lacking inet_ntop().
	  Replaced inet_ntoa() with inet_ntop().

2004-11-10  Chris Dunlap  <cdunlap@llnl.gov>

	* README: Updated.
	* README.AIX: Added.
	* configure.ac: Changed to older AC_INIT & AM_INIT_AUTOMAKE constructs.
	* munge.spec: Updated description.  Added manpages.
	* config/x_ac_meta.m4: Added metatags for AUTHOR and DATE.
	* src/libcommon/Makefile.am, src/libmunge/Makefile.am,
	  src/munge/Makefile.am, src/munged/Makefile.am: Added manpages.
	* src/libcommon/munge.7.in, src/libmunge/munge.3.in,
	  src/libmunge/munge_ctx.3.in, src/munge/munge.1.in,
	  src/munge/remunge.1.in, src/munge/unmunge.1.in,
	  src/munged/munged.8.in: Added.

	* src/libcommon/munge_defs.h, src/munged/conf.c:
	  Added MUNGE_AUTH_ROOT_ALLOW_FLAG.

	* src/munged/conf.c: Changed "--keyfile" cmdline opt to "--key-file".

	* src/munged/conf.c: Added "--auth-pipe-dir" cmdline opt.

2004-11-09  Chris Dunlap  <cdunlap@llnl.gov>

	* src/libcommon/munge_defs.h, src/munged/auth_recv.c,
	  src/munged/conf.c, src/munged/conf.h:
	  Changed MUNGE_AUTH_PIPE_NAME_PREFIX to MUNGE_AUTH_PIPE_DIR.
	  Changed MUNGE_AUTH_PIPE_NAME_RND_BYTES to MUNGE_AUTH_PIPE_RND_BYTES.
	  Changed conf struct auth_pipe_prefix to auth_pipe_dir.

	* src/munged/conf.c: